[tool.poetry]
name = "repl_python3_AdventureTime"
version = "0.1.0"
description = ""
authors = ["williamsmith <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
playsound = "^1.3.0"
pydub = "^0.25.1"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
